...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="byn-Xk-VcG">
                                        <rect key="frame" x="0.0" y="38" width="335" height="30"/>
                                        <nil key="textColor"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <state key="normal" title="SIGN IN">
                                            <color key="titleColor" red="0.90823972225189209" green="0.92638683319091797" blue="0.9317171573638916" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                        <rect key="frame" x="175.66666666666669" y="0.0" width="52" height="28"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                        <state key="normal" title="Sign Up.">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h8q-MF-pJZ">
                                        <rect key="frame" x="0.0" y="76.000000000000014" width="335" height="30"/>
                                        <nil key="textColor"/>
...
                                        <color key="tintColor" red="0.85262101889999997" green="0.42218321559999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                    </segmentedControl>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cvp-cZ-Ttv">
                                        <rect key="frame" x="0.0" y="35.999999999999972" width="335" height="30"/>
                                        <nil key="textColor"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Credit card" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dLS-AZ-ZvD">
                                        <rect key="frame" x="0.0" y="73.999999999999972" width="335" height="30"/>
                                        <nil key="textColor"/>
...
                                            <constraint firstAttribute="height" constant="36" id="yX8-Zi-5fS"/>
                                        </constraints>
                                        <state key="normal" title="SIGN UP">
                                            <color key="titleColor" red="0.90823972230000005" green="0.92638683320000004" blue="0.93171715740000005" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
