...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Cart-->
        <scene sceneID="nHt-MY-egV">
            <objects>
                <viewController title="Cart" id="7Oj-kM-Dat" customClass="CartViewController" customModule="Ibolyaev" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="tM1-Wr-syY">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="y7E-Eg-mId">
                                <rect key="frame" x="0.0" y="20" width="375" height="500.5"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k10-gW-PZT">
                                        <rect key="frame" x="0.0" y="39.5" width="51.5" height="36"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <color key="tintColor" red="0.85262101889999997" green="0.42218321559999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Pay"/>
                                        <connections>
                                            <action selector="payTouchUpInside:" destination="2eA-j0-st0" eventType="touchUpInside" id="ZvR-S7-Hez"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
