...
                            <constraint firstItem="skg-yb-m9f" firstAttribute="bottom" secondItem="KAM-ji-mIk" secondAttribute="bottom" id="sDh-sJ-9K4"/>
                            <constraint firstItem="KAM-ji-mIk" firstAttribute="height" secondItem="BbN-Ix-tZX" secondAttribute="height" multiplier="1:2" id="voS-8g-lJI"/>
                            <constraint firstItem="Co8-Jl-Wt1" firstAttribute="leading" secondItem="skg-yb-m9f" secondAttribute="leading" id="wHy-1i-nV8"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="skg-yb-m9f"/>
                    </view>
                    <navigationItem key="navigationItem" title="Product info" id="rUU-QO-Tru">
                        <barButtonItem key="rightBarButtonItem" title="Cart" id="9Ca-4f-6T3">
                            <connections>
                                <segue destination="cGz-Nb-w1U" kind="show" id="hAA-Q2-BBl"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
